# myiot

./: .gitignore  CMakeLists.txt  DLLVersion.rc  README.md
platform/OSP/StripBundle/: CMakeLists.txt
platform/OSP/Web/: CMakeLists.txt
platform/OSP/Web/src/: WebServerDispatcher.cpp
platform/OSP/WebEvent/: CMakeLists.txt
platform/Serial/: CMakeLists.txt
platform/WebTunnel/: CMakeLists.txt
services/: CMakeLists.txt
services/BundleWatcher/: BundleWatcher.bndlspec.in  CMakeLists.txt
services/BundleWatcher/bundle/: bundle.properties
services/BundleWatcher/src/: BundleActivator.cpp  BundleWatcherService.cpp  BundleWatcherService.h
services/JNDM123AcquisitionAgent/: CMakeLists.txt  JNDM123AcquisitionAgent.bndlspec.in
services/JNDM123AcquisitionAgent/src/: AcquisitionAgentApp.cpp  AcquisitionAgentSupport.cpp  AcquisitionAgentSupport.h  AcquisitionDdsJsonMessage.cpp  AcquisitionDdsJsonMessage.h  AcquisitionDivider.cpp  AcquisitionDivider.h  AcquisitionDividerState.cpp  AcquisitionRuntime.cpp  AcquisitionRuntime.h  AcquisitionUdpStream.cpp  AcquisitionUdpStream.h  BundleActivator.cpp  JNDM123AcquisitionDds.cpp  JNDM123AcquisitionDds.h  JNDM123AcquisitionProtocol.idl  JNDM123AcquisitionRuntime.cpp  JNDM123AcquisitionRuntime.h  JNDM123AcquisitionService.cpp  JNDM123AcquisitionService.h  JNDM123AcquisitionServiceApi.cpp  JNDM123AcquisitionServiceImpl.cpp
services/ProcessConsole/: CMakeLists.txt  ProcessConsole.bndlspec.in
services/ProcessConsole/bundle/: bundle.properties  extensions.xml
services/ProcessConsole/src/: BundleActivator.cpp  ConsoleCommandRequestHandler.cpp  ConsoleCommandRequestHandler.h  ProcessConsoleService.cpp  ProcessConsoleService.h  TerminalWebSocketRequestHandler.cpp  TerminalWebSocketRequestHandler.h
webUI/: CMakeLists.txt
webUI/BundleList/: BundleList.bndlspec.in  CMakeLists.txt  bundle.json
webUI/BundleList/bundle/: bundle.properties  extensions.xml
webUI/BundleList/src/: BundleActivator.cpp  BundleCatalogRequestHandler.cpp  BundleCatalogRequestHandler.h
webUI/BundleList/ui/: index.html  package-lock.json  package.json  vite.config.mjs
webUI/BundleList/ui/src/: App.vue
webUI/BundleList/ui/src/core/: locale.js  packageRegistry.js  sessionGateway.js
webUI/GlobalConfig/: CMakeLists.txt  GlobalConfig.bndlspec.in  bundle.json
webUI/GlobalConfig/bundle/: bundle.properties  extensions.xml
webUI/GlobalConfig/src/: BundleActivator.cpp  GlobalConfigRequestHandler.cpp  GlobalConfigRequestHandler.h
webUI/GlobalConfig/ui/: index.html  package-lock.json  package.json  vite.config.mjs
webUI/GlobalConfig/ui/src/: App.vue  main.js
webUI/GlobalConfig/ui/src/core/: packageRegistry.js
webUI/GlobalConfig/ui/src/plugins/: vuetify.js
webUI/Home/: CMakeLists.txt  Home.bndlspec.in  bundle.json
webUI/Home/bundle/: bundle.properties  extensions.xml
webUI/Home/src/: BundleActivator.cpp  LogStreamRequestHandler.cpp  LogStreamRequestHandler.h
webUI/Home/ui/: index.html  package-lock.json  package.json  vite.config.mjs
webUI/Home/ui/src/: App.vue
webUI/Home/ui/src/core/: packageLocalization.js  packageRegistry.js
webUI/Home/ui/src/styles/: main.css
webUI/JNDM123/: CMakeLists.txt  bundle.json
webUI/JNDM123/AD7606/: CMakeLists.txt  JNDM123.bndlspec.in
webUI/JNDM123/AD7606/bundle/: bundle.properties  extensions.xml
webUI/JNDM123/AD7606/src/: BundleActivator.cpp  JNDM123AgentManager.cpp  JNDM123AgentManager.h  JNDM123DdsBridge.cpp  JNDM123DdsBridge.h  JNDM123RequestHandler.cpp  JNDM123RequestHandler.h  JNDM123Runtime.cpp  JNDM123Runtime.h  JNDM123Support.cpp  JNDM123Support.h
webUI/JNDM123/AD7606/ui/: index.html  vite.config.mjs
webUI/JNDM123/AD7606/ui/src/: App.vue
webUI/JNDM123/bundle/: bundle.properties
webUI/JNDM123/src/: BundleActivator.cpp  JNDM123RequestHandler.cpp  JNDM123RequestHandler.h
webUI/JNDM123/ui/: package-lock.json  package.json  vite.config.mjs
webUI/JNDM123/ui/src/: App.vue
webUI/JNDM123/ui/src/core/: packageRegistry.js  requestLocale.js  sessionGateway.js
webUI/JNDM123/ui/src/plugins/: vuetify.js
webUI/JNDM123/ui/src/styles/: main.css
webUI/Launcher/: CMakeLists.txt  Launcher.bndlspec.in  bundle.json
webUI/Launcher/bundle/: bundle.properties
webUI/Launcher/src/: AuthRequestHandler.cpp  AuthRequestHandler.h  BundleActivator.cpp  RootRedirectRequestHandler.cpp  RootRedirectRequestHandler.h  SessionJSON.cpp  SessionJSON.h
webUI/Launcher/ui/: index.html  package-lock.json  package.json  vite.config.mjs
webUI/Launcher/ui/src/: App.vue
webUI/Launcher/ui/src/core/: packageRegistry.js  sessionGateway.js
webUI/LogViewer/: CMakeLists.txt  LogViewer.bndlspec.in  bundle.json
webUI/LogViewer/bundle/: bundle.properties  extensions.xml
webUI/LogViewer/src/: BundleActivator.cpp  IndexRequestHandler.cpp  IndexRequestHandler.h
webUI/LogViewer/ui/: index.html  package-lock.json  package.json  vite.config.mjs
webUI/LogViewer/ui/src/: App.vue  main.js
webUI/LogViewer/ui/src/core/: packageRegistry.js
webUI/LogViewer/ui/src/plugins/: vuetify.js
webUI/LogViewer/ui/src/styles/: main.css
webUI/ProcessConsole/: CMakeLists.txt  ProcessConsole.bndlspec.in  bundle.json
webUI/ProcessConsole/bundle/: extensions.xml
webUI/ProcessConsole/src/: BundleActivator.cpp
webUI/ProcessConsole/ui/: index.html  package-lock.json  package.json  vite.config.mjs
webUI/ProcessConsole/ui/src/: App.vue  PtyConsoleApp.vue
webUI/ProcessConsole/ui/src/core/: packageRegistry.js
webUI/SystemMonitor/: CMakeLists.txt  SystemMonitor.bndlspec.in  bundle.json
webUI/SystemMonitor/bundle/: extensions.xml
webUI/SystemMonitor/src/: BundleActivator.cpp  SystemMetricsRequestHandler.cpp  SystemMetricsRequestHandler.h  TelemetrySnapshotRequestHandler.cpp  TelemetrySnapshotRequestHandler.h
webUI/SystemMonitor/ui/: index.html  package-lock.json  package.json  vite.config.mjs
webUI/SystemMonitor/ui/src/: App.vue
webUI/SystemMonitor/ui/src/components/: TelemetryPanel.vue
webUI/SystemMonitor/ui/src/core/: packageLocalization.js  packageRegistry.js  (+1 more)
webUI/shared/: locale.js  packageLocalization.js
(+322 files in other folders)
